# ScoreSpoken

./: .gitignore  Docker.aws.json  Dockerfile  Dockerrun.aws.json  README.md  docker-compose.yml
.ebextensions/: 01-environment.config
.github/workflows/: ci.yml
backend/: Dockerfile  entrypoint.sh  fly.toml  pyproject.toml
backend/score/: settings.py  urls.py
frontend/: .dockerignore  Dockerfile  firebaseConfig.ts  firebaseconfig.txt  fly.toml  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
