[tool.poetry]
name = "score"
version = "0.1.0"
description = ""
authors = ["Rohit Malla <P2779735@my365.dmu.ac.uk>"]
package-mode = false
readme = "README.md"


[tool.poetry.dependencies]
django = ">=5.2.4,<6.0.0"
djangorestframework = ">=3.16.0,<4.0.0"
python = "^3.12"
gunicorn = "^23.0.0"
uvicorn = "^0.35.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
